--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -7,5 +7,7 @@
     "downscalePercent": 100
   },
   "promptDelete": false,
-  "alwaysUpdateLinks": true
+  "alwaysUpdateLinks": true,
+  "showLineNumber": false,
+  "readableLineLength": true
 }
